add photo profile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <header>
         <div>
-            <img src="https://github.com/cblouzada.png" 
+            <img src="https://media-exp1.licdn.com/dms/image/C4D03AQH-2cuoAmcaRA/profile-displayphoto-shrink_200_200/0/1661693536127?e=1669248000&v=beta&t=LcvOibqucpBQ0QvoDACrlRzQ8JqtREa0htcJtk1AYd0" 
             alt="Foto de Carlos">
         </div>
     </header>
